--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 /*
     Paleta de cores
@@ -12,4 +12,54 @@
     --cor-gradiente: #F8E1F6;
     --rosa: #FDDDF5;
 
+}
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #adc4f4;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.436);
+
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
+}
+
+section#login > div#imagem{
+    display: block;
+    background: url('../imagens/pexels-gustavo-crivellari-3608635-5396940.jpg');
+    background-size: cover;
+    height: 200px;
+    background-position: center left;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
 }
