--- a/estilos/midia-query.css
+++ b/estilos/midia-query.css
@@ -16,6 +16,9 @@
         float: right;
         width: 70%;
     }
+    div#formulario > p{
+    font-size: 1em;   
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -34,4 +37,9 @@
         float: right;
         width: 50%;
     }
+
+    div#formulario > p{
+    font-size: 1.2em;   
+    }
+
 }
