--- a/estilos/midia-query.css
+++ b/estilos/midia-query.css
@@ -6,6 +6,7 @@
     }
     section#login {
         width: 80vw;
+        height: 290px;
     }
     section#login > div#imagem {
         float: left;
@@ -27,6 +28,7 @@
     }
     section#login {
         width: 950px;
+        height: 400px;
     }
     section#login > div#imagem {
         float: left;
@@ -39,7 +41,9 @@
     }
 
     div#formulario > p{
-    font-size: 1.2em;   
+    font-size: 1.2em;
+    margin: 10px 0px;
+       
     }
 
 }
