--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,13 +42,13 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: #FFFFFF;
     width: 270px;
     height: 515px;
     border-radius: 20px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -58,7 +58,7 @@ section#login > div#imagem {
     background: url('../imagens/pexels-gustavo-crivellari-3608635-5396940.jpg');
     background-size: cover;
     height: 200px;
-    background-position: center left;
+    background-position: left center;
 }
 
 section#login > div#formulario {
@@ -79,11 +79,28 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #DCE8FA;
-    width: 100%;
+    border: 2px solid #DCE8FA;
+    width: 99%;
     display: block;
-    height: 40px;
-    border-radius: 5px;
+    height: 41px;
+    border-radius: 8px;
     margin: 5px 0;
+}
+div.campo > span.material-icons{
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: white;
+    font-size: 1em;
+    height: 92%;
+    width: calc(100% - 47px);
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-11px);
 }
 
 form label {
